@@ -20,6 +20,8 @@ package org.opensaml.saml.common.profile.impl;
 import net.shibboleth.utilities.java.support.component.ComponentInitializationException;
 import net.shibboleth.utilities.java.support.logic.FunctionSupport;
 
+import java.util.List;
+
 import org.opensaml.core.OpenSAMLInitBaseTestCase;
 import org.opensaml.core.xml.config.XMLObjectProviderRegistrySupport;
 import org.opensaml.profile.RequestContextBuilder;
@@ -38,8 +40,6 @@ import org.testng.Assert;
 import org.testng.annotations.BeforeMethod;
 import org.testng.annotations.Test;
 
-import com.google.common.collect.ImmutableList;
-
 /** {@link AddAudienceRestrictionToAssertions} unit test. */
 public class AddAudienceRestrictionToAssertionsTest extends OpenSAMLInitBaseTestCase {
 
@@ -50,7 +50,7 @@ public class AddAudienceRestrictionToAssertionsTest extends OpenSAMLInitBaseTest
     
     @BeforeMethod public void setUp() throws ComponentInitializationException {
         action = new AddAudienceRestrictionToAssertions();
-        action.setAudienceRestrictionsLookupStrategy(FunctionSupport.constant(ImmutableList.of(AUDIENCE1, AUDIENCE2)));
+        action.setAudienceRestrictionsLookupStrategy(FunctionSupport.constant(List.of(AUDIENCE1, AUDIENCE2)));
         action.initialize();
     }
     
